--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# ### add myself ###############################################################
+.idea/
+tmp.py
+dynamic/
+conf/*.yml
+# ##############################################################################
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
