--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ tmp.py
 dynamic/
 conf/*.yml
 aa_devsup/
+docker-compose.yml
 # ##############################################################################
 # Byte-compiled / optimized / DLL files
 __pycache__/
