[clean] ignore files in conf folder other than tmpl files.

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,8 @@
 .idea/
 tmp.py
 dynamic/
-conf/*.yml
+conf/*
+!conf/*.tmpl
 aa_devsup/
 docker-compose.yml
 # ##############################################################################
